--- a/.github/workflows/homebrew-tap.yml
+++ b/.github/workflows/homebrew-tap.yml
@@ -9,9 +9,9 @@ on:
         description: 'Version to update (e.g., v0.1.0)'
         required: true
       tap_repo:
-        description: 'Tap repository (e.g., Borduas-Holdings/homebrew-tap)'
+        description: 'Tap repository (e.g., redoubt-cysec/homebrew-tap)'
         required: true
-        default: 'Borduas-Holdings/homebrew-tap'
+        default: 'redoubt-cysec/homebrew-tap'
 
 permissions:
   contents: read
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout tap repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          repository: ${{ inputs.tap_repo || 'Borduas-Holdings/homebrew-tap' }}
+          repository: ${{ inputs.tap_repo || 'redoubt-cysec/homebrew-tap' }}
           path: tap
           token: ${{ secrets.TAP_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
 
@@ -69,7 +69,7 @@ jobs:
           class Redoubt < Formula
             desc "Supply chain security verification tool"
             homepage "https://github.com/${{ github.repository }}"
-            url "https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.version_number }}/redoubt-release-template.pyz"
+            url "https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.version_number }}/provenance-demo.pyz"
             sha256 "${{ env.sha256 }}"
             version "${{ steps.version.outputs.version_number }}"
             license "MIT"
@@ -77,7 +77,7 @@ jobs:
             depends_on "python@3.11"
 
             def install
-              bin.install "redoubt-release-template.pyz" => "redoubt"
+              bin.install "provenance-demo.pyz" => "redoubt"
             end
 
             test do
@@ -128,6 +128,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Install command:" >> $GITHUB_STEP_SUMMARY
           echo '```bash' >> $GITHUB_STEP_SUMMARY
-          echo "brew tap ${{ inputs.tap_repo || 'Borduas-Holdings/homebrew-tap' }}" >> $GITHUB_STEP_SUMMARY
+          echo "brew tap ${{ inputs.tap_repo || 'redoubt-cysec/homebrew-tap' }}" >> $GITHUB_STEP_SUMMARY
           echo "brew install redoubt" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
