Fix workflows: add missing uv installation steps
Three workflows were calling build_pyz.sh without having uv installed:
- main-verify.yml (Pre-release Security Gates)
- quick-pr-checks.yml (PR Quick Checks)
- rebuilder.yml (Deterministic Rebuilder)

Added 'Install uv' step before build in all three workflows.

--- a/.github/workflows/rebuilder.yml
+++ b/.github/workflows/rebuilder.yml
@@ -36,6 +36,11 @@ jobs:
           git fetch --tags
           git checkout "${{ inputs.tag }}"
 
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
       - name: Build
         run: |
           ./scripts/build_pyz.sh
