--- a/.github/workflows/main-verify.yml
+++ b/.github/workflows/main-verify.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
       - name: Deterministic env
         run: |
           echo "TZ=UTC" >> $GITHUB_ENV
