--- a/.github/workflows/quick-pr-checks.yml
+++ b/.github/workflows/quick-pr-checks.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
       - name: Sanity build
         run: |
           ./scripts/build_pyz.sh
