--- a/.github/workflows/main-verify.yml
+++ b/.github/workflows/main-verify.yml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Generate SBOM (CycloneDX)
         run: |
-          python -m pip install --upgrade cyclonedx-bom
-          python -m cyclonedx_bom -o sbom.cdx.json
+          uv pip install --system cyclonedx-bom
+          uv run --no-project python -m cyclonedx_bom -o sbom.cdx.json
 
       - name: Determinism audit (double-build diff)
         run: |
