Fix SBOM: use pip directly with --break-system-packages
The issue was that uv pip install --system installs to a different
location than where the system Python looks for modules.

Solution: Use regular pip with --break-system-packages flag
(safe in CI environment) so Python can find cyclonedx_bom module.

Keep uv for build_pyz.sh (works fine there), use pip for SBOM.

--- a/.github/workflows/main-verify.yml
+++ b/.github/workflows/main-verify.yml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Generate SBOM (CycloneDX)
         run: |
-          uv pip install --system cyclonedx-bom
-          uv run --no-project python -m cyclonedx_bom -o sbom.cdx.json
+          pip install --break-system-packages cyclonedx-bom
+          python -m cyclonedx_bom -o sbom.cdx.json
 
       - name: Determinism audit (double-build diff)
         run: |
