Fix gitleaks false positives and winget install

--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -36,6 +36,8 @@ jobs:
               # choco install provenance-demo -y --source http://localhost:8080/
             }
             "winget" {
+              # Enable local manifest support so winget can install from a file
+              winget settings --enable LocalManifestFiles
               winget validate .\packaging\winget\manifests\OWNER.redoubt.yaml
               winget install --manifest .\packaging\winget\manifests\OWNER.redoubt.yaml `
                 --silent --accept-source-agreements --accept-package-agreements
