--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -44,6 +44,7 @@ jobs:
               $linkDir = Join-Path $Env:LOCALAPPDATA 'Microsoft\WinGet\Links'
               if (Test-Path $linkDir) {
                 $Env:PATH = "$linkDir;$Env:PATH"
+                Get-ChildItem $linkDir
               }
               provenance-demo --version
             }
