--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -37,6 +37,7 @@ jobs:
             }
             "winget" {
               # Enable local manifest support so winget can install from a file
+              winget source reset --force
               winget source remove --name msstore
               winget settings --enable LocalManifestFiles
               winget validate .\packaging\winget\manifests\OWNER.redoubt.yaml
