--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -8,7 +8,7 @@ jobs:
   get-platforms:
     runs-on: ubuntu-latest
     outputs:
-      platforms: ${{ steps.read_config.outputs.platforms }}
+      matrix: ${{ steps.read_config.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
 
@@ -21,15 +21,15 @@ import json
 with open('config/ci-platforms.yml', 'r') as f:
     config = yaml.safe_load(f)
 enabled_platforms = [key for key, value in config['platforms'].items() if value['enabled']]
-print(f'platforms={json.dumps(enabled_platforms)}')
+matrix_output = {'package_manager': enabled_platforms}
+print(f'matrix={json.dumps(matrix_output)}')
 " >> "$GITHUB_OUTPUT"
 
   test-windows:
     needs: get-platforms
     runs-on: windows-latest
     strategy:
-      matrix:
-        package_manager: ${{ fromJson(needs.get-platforms.outputs.platforms) }}
+      matrix: ${{ fromJson(needs.get-platforms.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
 
