--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -27,7 +27,7 @@ print(f'matrix={json.dumps(matrix_output)}')
 
   test-windows:
     needs: get-platforms
-    if: ${{ needs.get-platforms.outputs.matrix != '{"package_manager": []}' }}
+    if: ${{ fromJson(needs.get-platforms.outputs.matrix).package_manager.length > 0 }}
     runs-on: windows-latest
     strategy:
       matrix: ${{ fromJson(needs.get-platforms.outputs.matrix) }}
