Fix malformed YAML by commenting out dangling if condition

--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -27,7 +27,7 @@ print(f'matrix={json.dumps(matrix_output)}')
 
   # test-windows:
   #   needs: get-platforms
-    if: ${{ needs.get-platforms.outputs.matrix != '{"package_manager": []}' }}
+  #   if: ${{ needs.get-platforms.outputs.matrix != '{"package_manager": []}' }}
   #   runs-on: windows-latest
   #   strategy:
   #     matrix: ${{ fromJson(needs.get-platforms.outputs.matrix) }}
