--- a/.github/workflows/secure-release.yml
+++ b/.github/workflows/secure-release.yml
@@ -1,7 +1,9 @@
 name: Secure Release
 on:
   push:
-    tags: ['v*']
+    tags:
+      - 'v*'
+  workflow_dispatch:
 
 permissions:
   contents: write
